{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 20,
  "lineage": "6634a058-8eac-5272-2e55-233deeb8af24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecosmart_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795644302799:internet-gateway/igw-052aa4cc1d3f1952a",
            "id": "igw-052aa4cc1d3f1952a",
            "owner_id": "795644302799",
            "tags": {
              "Name": "ecosmart-igw"
            },
            "tags_all": {
              "Name": "ecosmart-igw"
            },
            "vpc_id": "vpc-04690218d031ec0f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ecosmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecosmart_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:795644302799:loadbalancer/app/ecosmart-production-alb/8e53a4810f0c82e7",
            "arn_suffix": "app/ecosmart-production-alb/8e53a4810f0c82e7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecosmart-production-alb-1101996261.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:795644302799:loadbalancer/app/ecosmart-production-alb/8e53a4810f0c82e7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecosmart-production-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05c05f8c922fe512e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e574f8e9441e6a2"
              },
              {
                "subnet_id": "subnet-0deb4c5455ce14221"
              }
            ],
            "subnets": [
              "subnet-04e574f8e9441e6a2",
              "subnet-0deb4c5455ce14221"
            ],
            "tags": {
              "Name": "ecosmart-production-alb"
            },
            "tags_all": {
              "Name": "ecosmart-production-alb"
            },
            "vpc_id": "vpc-04690218d031ec0f3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ecosmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecosmart_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:795644302799:listener/app/ecosmart-production-alb/8e53a4810f0c82e7/48b07d0b3e3aafe2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:795644302799:targetgroup/ecosmart-production-tg/1da769bb02ff2099",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:795644302799:listener/app/ecosmart-production-alb/8e53a4810f0c82e7/48b07d0b3e3aafe2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:795644302799:loadbalancer/app/ecosmart-production-alb/8e53a4810f0c82e7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.ecosmart_alb",
            "aws_lb_target_group.ecosmart_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ecosmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecosmart_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:795644302799:targetgroup/ecosmart-production-tg/1da769bb02ff2099",
            "arn_suffix": "targetgroup/ecosmart-production-tg/1da769bb02ff2099",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:795644302799:targetgroup/ecosmart-production-tg/1da769bb02ff2099",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecosmart-production-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecosmart-production-tg"
            },
            "tags_all": {
              "Name": "ecosmart-production-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04690218d031ec0f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ecosmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecosmart_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795644302799:route-table/rtb-02bd540ad49d82fb9",
            "id": "rtb-02bd540ad49d82fb9",
            "owner_id": "795644302799",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-052aa4cc1d3f1952a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecosmart-public-rt"
            },
            "tags_all": {
              "Name": "ecosmart-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04690218d031ec0f3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ecosmart_igw",
            "aws_vpc.ecosmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7f92567aada1bf5",
            "route_table_id": "rtb-02bd540ad49d82fb9",
            "subnet_id": "subnet-04e574f8e9441e6a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ecosmart_igw",
            "aws_route_table.ecosmart_public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ecosmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab137f14b144b6c9",
            "route_table_id": "rtb-02bd540ad49d82fb9",
            "subnet_id": "subnet-0deb4c5455ce14221"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ecosmart_igw",
            "aws_route_table.ecosmart_public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ecosmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795644302799:security-group/sg-05c05f8c922fe512e",
            "description": "Allow HTTP traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c05f8c922fe512e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecosmart-alb-sg",
            "name_prefix": "",
            "owner_id": "795644302799",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecosmart-alb-sg"
            },
            "tags_all": {
              "Name": "ecosmart-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04690218d031ec0f3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ecosmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795644302799:security-group/sg-09eb1dd95fd89a0f2",
            "description": "Allow traffic from ALB to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09eb1dd95fd89a0f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c05f8c922fe512e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecosmart-ecs-sg",
            "name_prefix": "",
            "owner_id": "795644302799",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecosmart-ecs-sg"
            },
            "tags_all": {
              "Name": "ecosmart-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04690218d031ec0f3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.ecosmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795644302799:subnet/subnet-04e574f8e9441e6a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e574f8e9441e6a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795644302799",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecosmart-public-subnet-1"
            },
            "tags_all": {
              "Name": "ecosmart-public-subnet-1"
            },
            "vpc_id": "vpc-04690218d031ec0f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ecosmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795644302799:subnet/subnet-0deb4c5455ce14221",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0deb4c5455ce14221",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795644302799",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecosmart-public-subnet-2"
            },
            "tags_all": {
              "Name": "ecosmart-public-subnet-2"
            },
            "vpc_id": "vpc-04690218d031ec0f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ecosmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecosmart_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795644302799:vpc/vpc-04690218d031ec0f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e1d4ae0403e0a0b6",
            "default_route_table_id": "rtb-0307f853ac4a4a545",
            "default_security_group_id": "sg-03e5ab629494c0dd6",
            "dhcp_options_id": "dopt-0b59b39a9a1fb3a0c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04690218d031ec0f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0307f853ac4a4a545",
            "owner_id": "795644302799",
            "tags": {
              "Name": "ecosmart-production-vpc"
            },
            "tags_all": {
              "Name": "ecosmart-production-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}